// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInternalPaging tests change currentPage from click 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          21
        </div>
      </td>
      <td>
        <div>
          Chester A. Arthur
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1829
        </div>
      </td>
      <td>
        <div>
          1886
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1881-09-19
        </div>
      </td>
      <td>
        <div>
          1885-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          22
        </div>
      </td>
      <td>
        <div>
          Grover Cleveland
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1837
        </div>
      </td>
      <td>
        <div>
          1908
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1885-03-04
        </div>
      </td>
      <td>
        <div>
          1889-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          23
        </div>
      </td>
      <td>
        <div>
          Benjamin Harrison
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1833
        </div>
      </td>
      <td>
        <div>
          1901
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1889-03-04
        </div>
      </td>
      <td>
        <div>
          1893-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          24
        </div>
      </td>
      <td>
        <div>
          Grover Cleveland
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1837
        </div>
      </td>
      <td>
        <div>
          1908
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1893-03-04
        </div>
      </td>
      <td>
        <div>
          1897-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          25
        </div>
      </td>
      <td>
        <div>
          William McKinley
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1843
        </div>
      </td>
      <td>
        <div>
          1901
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1897-03-04
        </div>
      </td>
      <td>
        <div>
          1901-09-14
        </div>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests change currentPage from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          21
        </div>
      </td>
      <td>
        <div>
          Chester A. Arthur
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1829
        </div>
      </td>
      <td>
        <div>
          1886
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1881-09-19
        </div>
      </td>
      <td>
        <div>
          1885-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          22
        </div>
      </td>
      <td>
        <div>
          Grover Cleveland
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1837
        </div>
      </td>
      <td>
        <div>
          1908
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1885-03-04
        </div>
      </td>
      <td>
        <div>
          1889-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          23
        </div>
      </td>
      <td>
        <div>
          Benjamin Harrison
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1833
        </div>
      </td>
      <td>
        <div>
          1901
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1889-03-04
        </div>
      </td>
      <td>
        <div>
          1893-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          24
        </div>
      </td>
      <td>
        <div>
          Grover Cleveland
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1837
        </div>
      </td>
      <td>
        <div>
          1908
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1893-03-04
        </div>
      </td>
      <td>
        <div>
          1897-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          25
        </div>
      </td>
      <td>
        <div>
          William McKinley
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1843
        </div>
      </td>
      <td>
        <div>
          1901
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1897-03-04
        </div>
      </td>
      <td>
        <div>
          1901-09-14
        </div>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests render paging 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1789-04-30
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1797-03-04
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1801-03-04
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1809-03-04
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1817-03-04
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          6
        </div>
      </td>
      <td>
        <div>
          John Quincy Adams
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1767
        </div>
      </td>
      <td>
        <div>
          1848
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1825-03-04
        </div>
      </td>
      <td>
        <div>
          1829-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          7
        </div>
      </td>
      <td>
        <div>
          Andrew Jackson
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1767
        </div>
      </td>
      <td>
        <div>
          1845
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1829-03-04
        </div>
      </td>
      <td>
        <div>
          1837-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          8
        </div>
      </td>
      <td>
        <div>
          Martin Van Buren
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1782
        </div>
      </td>
      <td>
        <div>
          1862
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1837-03-04
        </div>
      </td>
      <td>
        <div>
          1841-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          9
        </div>
      </td>
      <td>
        <div>
          William Henry Harrison
        </div>
      </td>
      <td>
        <div>
          Whig
        </div>
      </td>
      <td>
        <div>
          1773
        </div>
      </td>
      <td>
        <div>
          1841
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1841-03-04
        </div>
      </td>
      <td>
        <div>
          1841-04-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          10
        </div>
      </td>
      <td>
        <div>
          John Tyler
        </div>
      </td>
      <td>
        <div>
          Whig
        </div>
      </td>
      <td>
        <div>
          1790
        </div>
      </td>
      <td>
        <div>
          1862
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1841-04-04
        </div>
      </td>
      <td>
        <div>
          1845-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          11
        </div>
      </td>
      <td>
        <div>
          James K. Polk
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1795
        </div>
      </td>
      <td>
        <div>
          1849
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1845-03-04
        </div>
      </td>
      <td>
        <div>
          1849-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          12
        </div>
      </td>
      <td>
        <div>
          Zachary Taylor
        </div>
      </td>
      <td>
        <div>
          Whig
        </div>
      </td>
      <td>
        <div>
          1784
        </div>
      </td>
      <td>
        <div>
          1850
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1849-03-04
        </div>
      </td>
      <td>
        <div>
          1850-07-09
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          13
        </div>
      </td>
      <td>
        <div>
          Millard Fillmore
        </div>
      </td>
      <td>
        <div>
          Whig
        </div>
      </td>
      <td>
        <div>
          1800
        </div>
      </td>
      <td>
        <div>
          1874
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1850-07-09
        </div>
      </td>
      <td>
        <div>
          1853-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          14
        </div>
      </td>
      <td>
        <div>
          Franklin Pierce
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1804
        </div>
      </td>
      <td>
        <div>
          1869
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1853-03-04
        </div>
      </td>
      <td>
        <div>
          1857-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          15
        </div>
      </td>
      <td>
        <div>
          James Buchanan
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1791
        </div>
      </td>
      <td>
        <div>
          1868
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1857-03-04
        </div>
      </td>
      <td>
        <div>
          1861-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          16
        </div>
      </td>
      <td>
        <div>
          Abraham Lincoln
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1809
        </div>
      </td>
      <td>
        <div>
          1865
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1861-03-04
        </div>
      </td>
      <td>
        <div>
          1865-04-15
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          17
        </div>
      </td>
      <td>
        <div>
          Andrew Johnson
        </div>
      </td>
      <td>
        <div>
          Democratic
        </div>
      </td>
      <td>
        <div>
          1808
        </div>
      </td>
      <td>
        <div>
          1875
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1865-04-15
        </div>
      </td>
      <td>
        <div>
          1869-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          18
        </div>
      </td>
      <td>
        <div>
          Ulysses S. Grant
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1822
        </div>
      </td>
      <td>
        <div>
          1885
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1869-03-04
        </div>
      </td>
      <td>
        <div>
          1877-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          19
        </div>
      </td>
      <td>
        <div>
          Rutherford B. Hayes
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1822
        </div>
      </td>
      <td>
        <div>
          1893
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1877-03-04
        </div>
      </td>
      <td>
        <div>
          1881-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          20
        </div>
      </td>
      <td>
        <div>
          James A. Garfield
        </div>
      </td>
      <td>
        <div>
          Republican
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td>
        <div>
          1881
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div>
          1881-03-04
        </div>
      </td>
      <td>
        <div>
          1881-09-19
        </div>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="1"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;
